[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/joystick/joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/mp/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://gameplay/mp/ui/mp_death_screen/mp_death_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/mp/ui/battle_end/battle_end.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/mp/ui/gui/gui.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/menu/menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/simple_dialog_option/simple_dialog_option.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/scoreboard/scoreboard.tscn" type="PackedScene" id=12]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="gui" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="joystick" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="mp_death_screen" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="scoreboard" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false

[node name="battle_end" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="menu" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="simple_dialog_on_exit" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[connection signal="on_menu_press" from="CanvasLayer/gui" to="." method="_on_gui_on_menu_press"]
[connection signal="on_score_press" from="CanvasLayer/gui" to="." method="_on_gui_on_score_press"]
[connection signal="on_joystick_input" from="CanvasLayer/joystick" to="." method="_on_joystick_on_joystick_input"]
[connection signal="on_next_press" from="CanvasLayer/mp_death_screen" to="." method="_on_mp_death_screen_on_next_press"]
[connection signal="on_previous_press" from="CanvasLayer/mp_death_screen" to="." method="_on_mp_death_screen_on_previous_press"]
[connection signal="on_respawn_press" from="CanvasLayer/mp_death_screen" to="." method="_on_mp_death_screen_on_respawn_press"]
[connection signal="main_menu" from="CanvasLayer/battle_end" to="." method="_on_battle_end_main_menu"]
[connection signal="rematch" from="CanvasLayer/battle_end" to="." method="_on_battle_end_rematch"]
[connection signal="on_main_menu_press" from="CanvasLayer/menu" to="." method="_on_menu_on_main_menu_press"]
[connection signal="on_yes" from="CanvasLayer/simple_dialog_on_exit" to="." method="_on_simple_dialog_on_exit_on_yes"]
